# VtxCAP

./: .gitignore  README.md  adaptive-filter.py  cwt.py  dwt.py  gdwt.py  pyproject.toml  run.py  test_algo_sos.py
stdfilters/: algo_dc.py  algo_sos.py
stdfilters/stdfilters/: algo.py  algo_sos.py  filters.py
